--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   font-family: "Plain Regular";
   /* background-color: #030303; */
 }
+[data-scroll-container] {
+  min-height: 100vh;
+}
 html,
 body {
   height: 100%;
